force-app/main/default/objects/ZERO_API_Const__mdt/ZERO_API_Const__mdt.object-meta.xml
<CustomObject>
    <label>ZERO_API_Const</label>
</CustomObject>