force-app/main/default/objects/ZERO_API_Const__mdt/fields/BillingMemberNo__c.field-meta.xml
<CustomField>
    <fullName>BillingMemberNo__c</fullName>
    <label>請求先会員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>