force-app/main/default/objects/ZERO_API_Const__mdt/fields/CarItemNo__c.field-meta.xml
<CustomField>
    <fullName>CarItemNo__c</fullName>
    <label>車両明細番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>