force-app/main/default/objects/ZERO_API_Const__mdt/fields/CollectionAddressSetFlg__c.field-meta.xml
<CustomField>
    <fullName>CollectionAddressSetFlg__c</fullName>
    <label>引取先住所セットフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>