force-app/main/default/objects/ZERO_API_Const__mdt/fields/CollectionMemberNo__c.field-meta.xml
<CustomField>
    <fullName>CollectionMemberNo__c</fullName>
    <label>引取先会員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>