force-app/main/default/objects/ZERO_API_Const__mdt/fields/DeliveryAddressSetFlg__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressSetFlg__c</fullName>
    <label>搬入先住所セットフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>