force-app/main/default/objects/ZERO_API_Const__mdt/fields/DestinationRestrictionFlg__c.field-meta.xml
<CustomField>
    <fullName>DestinationRestrictionFlg__c</fullName>
    <label>搬入先規制フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>