force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestAddressSet__c.field-meta.xml
<CustomField>
    <fullName>RequestAddressSet__c</fullName>
    <label>依頼先住所セット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>