force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestAddressSetFlg__c.field-meta.xml
<CustomField>
    <fullName>RequestAddressSetFlg__c</fullName>
    <label>依頼先住所セットフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>