force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestDepartmentName__c.field-meta.xml
<CustomField>
    <fullName>RequestDepartmentName__c</fullName>
    <inlineHelpText>買取受付の時の部署名</inlineHelpText>
    <label>依頼先部署名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>