force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestFax__c.field-meta.xml
<CustomField>
    <fullName>RequestFax__c</fullName>
    <label>依頼先ＦＡＸ番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>