force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestMemberNo__c.field-meta.xml
<CustomField>
    <fullName>RequestMemberNo__c</fullName>
    <label>依頼先会員番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>