force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestName__c.field-meta.xml
<CustomField>
    <fullName>RequestName__c</fullName>
    <label>依頼先名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>