force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestPersonName__c.field-meta.xml
<CustomField>
    <fullName>RequestPersonName__c</fullName>
    <inlineHelpText>買取受付の時の担当者名</inlineHelpText>
    <label>依頼先担当者名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>