force-app/main/default/objects/ZERO_API_Const__mdt/fields/RequestPhoneNo__c.field-meta.xml
<CustomField>
    <fullName>RequestPhoneNo__c</fullName>
    <inlineHelpText>買取受付の時の電話番号</inlineHelpText>
    <label>依頼先電話番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>