force-app/main/default/objects/ZERO_API_Const__mdt/fields/Spare04_NoRemoved__c.field-meta.xml
<CustomField>
    <fullName>Spare04_NoRemoved__c</fullName>
    <label>[未使用]予備０４ ※ナンバー外し</label>
    <length>255</length>
    <type>Text</type>
</CustomField>