force-app/main/default/objects/ZERO_API_Const__mdt/fields/UpdateType__c.field-meta.xml
<CustomField>
    <fullName>UpdateType__c</fullName>
    <label>更新区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>